Fix spacing

--- a/frontend/src/scenes/insights/Hedgehogger/Hedgehogger.scss
+++ b/frontend/src/scenes/insights/Hedgehogger/Hedgehogger.scss
@@ -1,5 +1,5 @@
 .Hedgehogger {
-    margin: 1rem 0;
+    padding: 1rem 0;
     width: 100%;
     color: var(--border);
 
