--- a/frontend/src/scenes/insights/InsightTooltip/InsightTooltip.scss
+++ b/frontend/src/scenes/insights/InsightTooltip/InsightTooltip.scss
@@ -118,6 +118,7 @@
             justify-content: center;
             color: var(--text-default);
             font-weight: 600;
+            white-space: nowrap;
         }
     }
 }
